# ellisia

./: .editorconfig  .gitignore  .postcssrc  index.html  package.json  package.json.yarn  vite.config.ts
public/static/: fonts.css
public/static/renderer/: epub.css  epub.js
src/: Library.scss  Library.tsx  Reader.scss  Reader.tsx  epub.ts  index.d.ts  index.tsx  styles.scss  utils.ts
src-tauri/: Cargo.toml  Tauri.toml
src-tauri/src/: app.rs  commands.rs  epub.rs  error.rs  library.rs  main.rs  path.rs  renderer.rs  state.rs  utils.rs  zip.rs
src-tauri/src/epub/: container.rs  rootfile.rs  toc.rs
src-tauri/src/epub/toc/: ncx.rs
src-tauri/src/templates/: blank.html  body-end.html  body-start.html  csp-xhtml.txt  csp.txt  head-end.html
src/assets/: body-end.html  body-start.html  csp.txt  head-end.html
src/components/: Navigation.scss  Navigation.tsx  Toolbar.scss  Toolbar.tsx  ToolbarIcon.scss  ToolbarIcon.tsx
src/epub/: IframeViewWithCSP.ts
src/history/: AbstractHistory.ts  SimpleSignal.ts  index.ts  types.ts  utils.ts
src/types/: epubjs.d.ts  index.d.ts
