[package]
name = "ellisia"
version = "0.1.0"
description = "An Ebook Reader"
authors = ["Balthild <ibalthild@gmail.com>"]
license = "GPL-3.0"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = ["config-toml"] }

[dependencies]
tauri = { version = "1.2", features = ["dialog", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.28.1", features = ["serialize"] }
anyhow = "1.0.70"
base64-url = "2.0.0"
zip = "0.6.4"
dashmap = { version = "5.4.0", features = ["serde"] }
regex = "1.7.2"
tiny_http = "0.12.0"
rand = "0.8.5"
rayon-core = "1.11.0"
build-time = "0.1.2"
dirs = "5.0.0"
typed-path = "0.3.2"
num_cpus = "1.15.0"
parking_lot = { version = "0.12.1", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# this feature is used for debugging in production builds
devtools = ["tauri/devtools"]
