[package]
name = "ellisia"
version = "0.1.0"
description = "An Ebook Reader"
authors = ["Balthild <ibalthild@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/balthild/ellisia"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = ["config-toml"] }

[dependencies]
tauri = { version = "1.4", features = [ "window-start-dragging", "window-set-title", "dialog-all", "dialog"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.30.0", features = ["serialize", "overlapped-lists"] }
anyhow = "1.0"
base64-url = "2.0"
zip = "0.6.6"
dashmap = { version = "5.5.0", features = ["serde"] }
regex = "1.9.3"
tiny_http = "0.12.0"
rand = "0.8.5"
rayon-core = "1.11.0"
build-time = "0.1.3"
dirs = "5.0.1"
typed-path = "0.3.2"
num_cpus = "1.16.0"
parking_lot = "0.12.1"
image = "0.24.7"
humantime-serde = "1.1.1"
crossbeam-channel = "0.5.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# this feature is used for debugging in production builds
devtools = ["tauri/devtools"]
